# nori-rs

./: .gitignore  Cargo.toml
src/: main.rs
src/commands/: config_utils.rs  configs.rs  help.rs  mod.rs
src/operations/: captcha.rs  drop.rs  eval.rs  grab_reminder.rs  minigame.rs  mod.rs  series1.rs  series2.rs  wishlist_updaters.rs  wl_edit_updater.rs
src/utils/: cards_handler.rs  config_data.rs  database_handler.rs  handler.rs  mod.rs  ocr_captcha.rs  ocr_drop.rs  ocr_series.rs  reminders.rs  series_handler.rs
