[package]
name = "noriblitz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptess = "0.14.0"
reqwest = "0.11.14"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
mongodb = "2.3.1"
image = "0.24.5"
serde_json = "1.0.93"
async-channel = "1.8.0"
rayon = "1.6.1"
serde = "1.0.152"
once_cell = "1.17.1"


[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"]
version = "0.11.5"